# DApp-for-decentralizing-real-estate-management

./: Dockerfile  README.md  pyproject.toml
dao/: app.py  base_router.py  config.py  customers.json  db.py  debug.py  initializer.py  models.py  properties.json  scripts.py
