[tool.poetry]
name = "dao"
version = "0.1.0"
description = ""
authors = ["Kasymkhan <kasymkhankhubievnis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic = "^2.10.3"
pydantic-settings = "^2.7.0"
black = "^24.10.0"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
