[tool.poetry]
name = "dao"
version = "0.1.0"
description = ""
authors = ["Kasymkhan <kasymkhankhubievnis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic-settings = "^2.7.0"
black = "^24.10.0"
uvicorn = "^0.34.0"
aiogram = "^3.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
